fix skipping multiple pages in reader when swiping between them. The fix is based on that we enable only one UIPanGestureRecognizer : when page is shown IAReaderPageVC's panGesture is enabled otherwise the default of the UIPageViewController is enabled.
The commit also contains some cleanup

--- a/Archive/Base.lproj/Reader.storyboard
+++ b/Archive/Base.lproj/Reader.storyboard
@@ -186,6 +186,7 @@
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <connections>
                         <outlet property="imageView" destination="Teh-Dt-DnY" id="Era-A0-Uah"/>
+                        <outlet property="panGestureRecognizer" destination="9YS-lP-pdk" id="VMU-CQ-ksp"/>
                         <outlet property="scrollView" destination="JBX-Rp-5oF" id="9fN-64-m3L"/>
                     </connections>
                 </viewController>
