--- a/Archive/Base.lproj/Main.storyboard
+++ b/Archive/Base.lproj/Main.storyboard
@@ -620,6 +620,9 @@
                                 <variation key="widthClass=regular" misplaced="YES">
                                     <rect key="frame" x="268" y="263" width="52" height="20"/>
                                 </variation>
+                                <variation key="heightClass=compact-widthClass=regular" misplaced="YES">
+                                    <rect key="frame" x="268" y="163" width="52" height="20"/>
+                                </variation>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LLd-0V-xz1">
                                 <rect key="frame" x="230" y="269" width="100" height="55"/>
@@ -633,6 +636,9 @@
                                 </variation>
                                 <variation key="widthClass=regular" misplaced="YES">
                                     <rect key="frame" x="330" y="245" width="100" height="55"/>
+                                </variation>
+                                <variation key="heightClass=compact-widthClass=regular" misplaced="YES">
+                                    <rect key="frame" x="330" y="145" width="100" height="55"/>
                                 </variation>
                                 <connections>
                                     <action selector="presentLoginscreen:" destination="lLM-Px-7Mb" eventType="touchUpInside" id="Yxx-qy-0DV"/>
@@ -651,6 +657,9 @@
                                 </variation>
                                 <variation key="widthClass=regular" misplaced="YES">
                                     <rect key="frame" x="440" y="262" width="82" height="20"/>
+                                </variation>
+                                <variation key="heightClass=compact-widthClass=regular" misplaced="YES">
+                                    <rect key="frame" x="440" y="162" width="82" height="20"/>
                                 </variation>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favorite" translatesAutoresizingMaskIntoConstraints="NO" id="fBf-Uu-wIM">
@@ -671,6 +680,9 @@
                                 </variation>
                                 <variation key="widthClass=regular" misplaced="YES">
                                     <rect key="frame" x="532" y="257" width="32" height="30"/>
+                                </variation>
+                                <variation key="heightClass=compact-widthClass=regular" misplaced="YES">
+                                    <rect key="frame" x="532" y="157" width="32" height="30"/>
                                 </variation>
                             </imageView>
                         </subviews>
@@ -771,9 +783,11 @@
                                                 <constraint firstAttribute="width" secondItem="3rv-el-uS0" secondAttribute="height" multiplier="1:1" id="D9J-ry-vjI"/>
                                                 <constraint firstAttribute="width" constant="200" id="Fbp-SJ-Hcj">
                                                     <variation key="widthClass=compact" constant="100"/>
+                                                    <variation key="heightClass=compact-widthClass=regular" constant="100"/>
                                                 </constraint>
                                                 <constraint firstAttribute="height" constant="200" id="oiF-rD-3kG">
                                                     <variation key="widthClass=compact" constant="100"/>
+                                                    <variation key="heightClass=compact-widthClass=regular" constant="100"/>
                                                     <variation key="heightClass=regular-widthClass=regular" constant="150"/>
                                                 </constraint>
                                             </constraints>
@@ -795,6 +809,7 @@
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="120" id="kkE-6J-Odc">
                                                     <variation key="widthClass=compact" constant="60"/>
+                                                    <variation key="heightClass=compact-widthClass=regular" constant="60"/>
                                                     <variation key="heightClass=regular-widthClass=regular" constant="60"/>
                                                 </constraint>
                                             </constraints>
@@ -962,7 +977,7 @@
             <objects>
                 <collectionViewController storyboardIdentifier="bookListVC" id="nhk-cK-l3N" customClass="IAItemsListVC" customModule="Archive" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="y1S-rR-OR7">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="443"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rOj-iu-F46">
@@ -973,7 +988,7 @@
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="itemCollectionCell" id="nKy-tb-s5e" customClass="IACollectionsExploreViewCell" customModule="Archive" customModuleProvider="target">
-                                <rect key="frame" x="20" y="45" width="150" height="250"/>
+                                <rect key="frame" x="20" y="109" width="150" height="250"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="150" height="250"/>
@@ -1062,7 +1077,7 @@
                                 </connections>
                             </collectionViewCell>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BookSearchCell" id="YhU-r8-D5Z" customClass="IAItemListCellView" customModule="Archive" customModuleProvider="target">
-                                <rect key="frame" x="180" y="20" width="150" height="300"/>
+                                <rect key="frame" x="180" y="84" width="150" height="300"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="150" height="300"/>
@@ -1895,7 +1910,7 @@
         <image name="sort" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="S2s-Yx-eJD"/>
         <segue reference="BNG-AH-2HG"/>
-        <segue reference="tge-dc-5FS"/>
     </inferredMetricsTieBreakers>
 </document>
